--- a/zuul-extend/resources/application.properties
+++ b/zuul-extend/resources/application.properties
@@ -19,6 +19,11 @@ spring.redis.timeout=5000ms
 #apollo.meta=http://localhost:8080
 #apollo.bootstrap.enabled=true
 #apollo.bootstrap.namespaces=application
+zuul.host.connection-request-timeout-millis=5
+
+zuul-extend-article-service.ribbon.NFLoadBalancerRuleClassName=com.itcast.extend.rule.GrayPushRule
+
+#zuul.routes.zuul-extend-article-service.path=/article
+#zuul.routes.zuul-extend-article-service.serviceId=zuul-extend-article-service
 
 
-#zuul-extend-article-service.ribbon.NFLoadBalancerRuleClassName=com.cxytiandi.zuul_demo.rule.GrayPushRule
