--- a/zuul-extend-article-service/pom.xml
+++ b/zuul-extend-article-service/pom.xml
@@ -58,6 +58,10 @@
 			<version>2.2.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>		
   </dependencies>
   
   
